# PitangaOS

./: .gitignore  CMakeLists.txt  README.md
include/config/: system_config.hpp  system_config_interrupt.hpp
include/drivers/: led.hpp  serial.hpp
include/manager/: collect_registrations.hpp  interrupt_manager.hpp  task_manager.hpp
include/notifications/: notification.hpp  observer.hpp
include/task/: task.hpp
include/type_lists/: type_list.hpp
src/: main.cpp
tests/tests/: interrupt_manager_test.cpp
